--- a/test.md.html
+++ b/test.md.html
@@ -50,10 +50,34 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+!!!
+    I'm a note. Don't mind me, I'm just sitting here.
+
+!!! note
+    Another note.
+
+!!! Tip
+    Close the door on the way out.
+
+!!! WARNING
+    I'm a warning, perhaps. *Something might happen!*
+
+!!! ERROR: Seriously
+    Watch out, something **bad** could happen.
+
+    This is still more error text.
+
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C linenumbers
+void insertion_sort(int data[], int length) {
+    for (int i = 0; i < length; ++i) {
+       ...
+    }
+}
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -63,7 +87,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. [#Kajiya86]
 
 ## testing this thing
 
@@ -244,6 +268,65 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum. [^test2
 𐃢𐃤𐃭𐃣𐃯𐃰𐃪𐃥𐃦𐃡𐃨𐃩
 
 ## This is a very long headline lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo!
+
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+### test
+
+## test
+
+# test
+
+## test
+
+(#) Bibliography
+
+[#Kajiya86]: James T. Kajiya. 1986. The Rendering Equation. In _Proceedings of Computer Graphics and Interactive Techniques (SIGGRAPH '86)_, ACM, 143-150. http://dx.doi.org/10.1145/15922.15902
 
 ---
 
